# vocha

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
crates/gridder/: Cargo.toml  justfile
crates/gridder-egui/: Cargo.toml
crates/gridder-egui-widgets/: Cargo.toml
crates/gridder-egui-widgets/src/: lib.rs  waveform.rs
crates/gridder-egui/src/: horizontal_scroll_and_zoom_area.rs  horzontal_scroll_bar.rs  lib.rs  view_range.rs  waveform.rs
crates/gridder/src/: app.rs  font_loading.rs  l10n.rs  main.rs  projects.rs
crates/textgrid-rs/: Cargo.toml  README.md  justfile
crates/textgrid-rs/scripts/: gen-textgrid-pympi-bin.py  pyproject.toml
crates/textgrid-rs/src/: binary_format.rs  lib.rs  text_format.rs
crates/textgrid-rs/src/binary_format/: deserializer.rs  serializer.rs  tests.rs
crates/textgrid-rs/src/text_format/: parser.rs  stringifier.rs  tests.rs  tokenizer.rs
crates/textgrid-rs/test-fixtures/nltk_contrib/: README.md  demo_data1.TextGrid  demo_data1.TextGrid.expected.ron  demo_data1.TextGrid.pympi-bin  demo_data2.TextGrid  demo_data2.TextGrid.expected.ron  demo_data2.TextGrid.pympi-bin
crates/textgrid-rs/test-fixtures/praatIO/: README.md  all_tiers_have_the_same_name.TextGrid.expected.ron  all_tiers_have_the_same_name.TextGrid.pympi-bin  bobby_phones_elan.TextGrid.expected.ron  bobby_phones_elan.TextGrid.pympi-bin  bobby_words_with_newlines.TextGrid.expected.ron  bobby_words_with_newlines.TextGrid.pympi-bin  bobby_words_with_newlines_longfile.TextGrid.expected.ron  bobby_words_with_newlines_longfile.TextGrid.pympi-bin  bobby_words_with_newlines_longfile_elan.TextGrid.expected.ron  mary_longfile.TextGrid.expected.ron  mary_with_constrained_tier_times.TextGrid.expected.ron  mary_with_constrained_tier_times.TextGrid.pympi-bin  mary_with_negative_zero.TextGrid.pympi-bin  textgrid_to_merge.TextGrid.expected.ron  textgrid_to_merge_longfile.TextGrid.expected.ron  textgrid_to_merge_longfile.TextGrid.pympi-bin
